# generative-models

./: .gitignore  pyproject.toml
configs/: adaptive_vae.yaml  config.yaml  diffusion.yaml  ebm.yaml  flow_matching.yaml  iwae.yaml  vae.yaml
configs/architecture/: mlp.yaml  residual_mlp.yaml  resmlp.yaml
configs/callbacks/: default.yaml
configs/config/: diffusion.yaml  ebm.yaml  flow_matching.yaml  iwae.yaml  vae.yaml
configs/data/: moons.yaml  spiral.yaml  two_moons.yaml
configs/evaluate/: default.yaml
configs/hydra/launcher/: submitit_slurm.yaml
configs/logger/: none.yaml  wandb.yaml
configs/model/: adaptive_vae.yaml  beta_vae.yaml  diffusion.yaml  ebm.yaml  flow_matching.yaml  iwae.yaml  vae.yaml
configs/trainer/: debug.yaml  default.yaml
scripts/: eval.py  train.py
src/: callbacks.py  eval.py  noise_schedules.py  train.py  utils.py
src/architectures/: __init__.py  energy_mlp.py  mlp.py
src/data/: spirals.py  two_moons.py
src/eval/: ebm.py  ebm_plots.py  metrics.py  plots.py  trajectory.py  vae.py
src/models/: base.py  beta_vae.py  diffusion.py  ebm.py  flow_matching.py  vae.py
